--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^7.0.0",
-    "eslint-webpack-plugin": "^2.4.0"
+    "eslint-webpack-plugin": "^2.4.0",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
