--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@quasar/cli": "^1.2.1",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
@@ -24,7 +25,8 @@
     "eslint-plugin-vue": "^7.0.0",
     "eslint-webpack-plugin": "^2.4.0",
     "less": "^4.1.1",
-    "less-loader": "^10.0.1"
+    "less-loader": "^10.0.1",
+    "strip-ansi": "^3.0.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
